###### TWE 4.8-1 RELEASED ######
2013-01-16 Sasa Bojanic <sasaboy@together.at>
   # Initial testcase documentation added to the project
   # Validating dynamic script variable self/cross/implicit cross references
   
2012-12-28 Sasa Bojanic <sasaboy@together.at>
   # Supported BasicType DATE and TIME data types
   # leave_request.xpdl and new_employee.xpdl are now utilizing DATE data type
   
2012-12-27 Sasa Bojanic <sasaboy@together.at>
   # Property panel for artifacts changed: now panel contains only neccessary properties depending on artifact type (Annotation or DataObject)

2012-11-09 Sasa Bojanic <sasaboy@together.at>
   # Updated to new TXM (jXPDL) library
   # Now when opening/reopening XPDL file, if possible, JaWE automatically switches to the mode written in XPDL file itself

2012-10-22 Sasa Bojanic <sasaboy@together.at>
   # WfXML component: now actions enabled/disabled depending on selection and in the case of WfXML is connected to Shark engine, depending on Shark's upload/update logic
   # WfXML component: when connected to Shark engine, can't update URL/Name/Description/Version/Status

2012-10-19 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Tooltip information provided for activity's email configuration (Shark's SMTPEventAuditManager related) 

2012-10-18 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved GUI for SubFlow activity modeling (actual->formal parameters)

2012-10-18 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Email configuration section for workflow process element (used with SMTPEventAuditManager). Nice GUI and XPDL validation.

2012-10-17 Sasa Bojanic <sasaboy@together.at>
   # Added possibility to all panels to display tooltip
   # Shark mode: Improved GUI for TaskApplication activity modeling (actual->formal parameters)

2012-10-12 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 