@@ -87,6 +87,7 @@ WORKLOAD_FACTORKey = Faktor optere\u0107enja
 XFORMS_FILEKey=XForms fajl
 CHECK_FOR_FIRST_ACTIVITYKey = Provera prve aktivnosti
 CHECK_FOR_CONTINUATIONKey = Provera automatskog nastavka
+CHECK_FOR_COMPLETIONKey = Provera automatskog zavr\u0161etka
 REDIRECT_AFTER_PROCESS_ENDKey = Preusmeri nakon zavr\u0161etka procesa
 
 EmailConfigurationKey=Konfiguracija za e-poruke
