@@ -65,14 +65,16 @@ public class SharkConstants  {
    public static final String EA_CHECK_FOR_CONTINUATION = "CHECK_FOR_CONTINUATION";
    public static final String EA_REDIRECT_AFTER_PROCESS_END = "REDIRECT_AFTER_PROCESS_END";
 
-   public static String EA_SMTP_EVENT_AUDIT_MANAGER_MODE = "SMTP_EVENT_AUDIT_MANAGER_MODE";
-   public static String EA_SMTP_EVENT_AUDIT_MANAGER_EXECUTION_MODE = "SMTP_EVENT_AUDIT_MANAGER_EXECUTION_MODE";
-   public static String EA_SMTP_EVENT_AUDIT_MANAGER_GROUP_EMAIL_ONLY = "SMTP_EVENT_AUDIT_MANAGER_GROUP_EMAIL_ONLY";
-   public static String EA_SMTP_EVENT_AUDIT_MANAGER_SUBJECT = "SMTP_EVENT_AUDIT_MANAGER_SUBJECT";
-   public static String EA_SMTP_EVENT_AUDIT_MANAGER_CONTENT = "SMTP_EVENT_AUDIT_MANAGER_CONTENT";
-   public static String EA_SMTP_EVENT_AUDIT_MANAGER_ATTACHMENTS = "SMTP_EVENT_AUDIT_MANAGER_ATTACHMENTS";
-   public static String EA_SMTP_EVENT_AUDIT_MANAGER_ATTACHMENT_NAMES = "SMTP_EVENT_AUDIT_MANAGER_ATTACHMENT_NAMES";
-   public static String EA_SMTP_EVENT_AUDIT_MANAGER_DM_ATTACHMENTS = "SMTP_EVENT_AUDIT_MANAGER_DM_ATTACHMENTS";
+   public static final String EA_CHECK_FOR_COMPLETION = "CHECK_FOR_COMPLETION";
+   
+   public static final String EA_SMTP_EVENT_AUDIT_MANAGER_MODE = "SMTP_EVENT_AUDIT_MANAGER_MODE";
+   public static final String EA_SMTP_EVENT_AUDIT_MANAGER_EXECUTION_MODE = "SMTP_EVENT_AUDIT_MANAGER_EXECUTION_MODE";
+   public static final String EA_SMTP_EVENT_AUDIT_MANAGER_GROUP_EMAIL_ONLY = "SMTP_EVENT_AUDIT_MANAGER_GROUP_EMAIL_ONLY";
+   public static final String EA_SMTP_EVENT_AUDIT_MANAGER_SUBJECT = "SMTP_EVENT_AUDIT_MANAGER_SUBJECT";
+   public static final String EA_SMTP_EVENT_AUDIT_MANAGER_CONTENT = "SMTP_EVENT_AUDIT_MANAGER_CONTENT";
+   public static final String EA_SMTP_EVENT_AUDIT_MANAGER_ATTACHMENTS = "SMTP_EVENT_AUDIT_MANAGER_ATTACHMENTS";
+   public static final String EA_SMTP_EVENT_AUDIT_MANAGER_ATTACHMENT_NAMES = "SMTP_EVENT_AUDIT_MANAGER_ATTACHMENT_NAMES";
+   public static final String EA_SMTP_EVENT_AUDIT_MANAGER_DM_ATTACHMENTS = "SMTP_EVENT_AUDIT_MANAGER_DM_ATTACHMENTS";
 
    public static final String EA_IS_MANDATORY="IS_MANDATORY";
    public static final String EA_MIN_LENGTH="MIN_LENGTH";
