@@ -1,4 +1,7 @@
 ###### TWE 4.8-1 RELEASED ######
+2013-01-25 Sasa Bojanic <sasaboy@together.at>
+   # Shark mode: supported CHECK_FOR_COMPLETION extended attribute
+
 2013-01-16 Sasa Bojanic <sasaboy@together.at>
    # Initial testcase documentation added to the project
    # Validating dynamic script variable self/cross/implicit cross references
